--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Task Manager PWA" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.webmanifest" />
+    <link rel="stylesheet" href="/index.css" />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
